--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
         <item name="android:padding">@dimen/textPadding</item>
         <item name="android:textAlignment">textStart</item>
     </style>
+
+    <style name="buttonStyle" parent="textStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:backgroundTint">#D53C3C</item>
+        <item name="android:textAlignment">center</item>
+    </style>
 </resources>
